now running on openjdk 10 as well as oracle 10 and any future versions of both, needed for exe to avoid oracle licence issues #38